--- a/static/css/faq.css
+++ b/static/css/faq.css
@@ -1,5 +1,5 @@
 #faq {
-  background: url("/static/images/faqBG.png") center no-repeat;
+  background: url("static/images/faqBG.png") center no-repeat;
   background-size: cover;
   padding: 100px 0;
 }
