--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -1,3 +1,25 @@
 #gallery {
   margin: 7% auto;
+  min-height: 0;
+  height: auto;
+}
+
+#gallery-content {
+  margin-top: 50px;
+}
+
+.gallery-image-container {
+  padding: 10px 20px 10px 0;
+}
+
+.gallery-image {
+  cursor: pointer;
+  max-width: 100%;
+}
+
+.gallery-image:hover {
+  margin: -5px;
+  -webkit-box-shadow: 0px 0px 33px 0px rgba(0,0,0,0.3);
+  -moz-box-shadow: 0px 0px 33px 0px rgba(0,0,0,0.3);
+  box-shadow: 0px 0px 33px 0px rgba(0,0,0,0.3);
 }
