--- a/static/css/main.css
+++ b/static/css/main.css
@@ -32,6 +32,50 @@ section {
 }
 
 h1 {
+  font-size: 28px;
   font-weight: 900;
   color: #3c2b5f;
+}
+
+.button {
+  padding: 14px 20px;
+  text-decoration: none !important;
+  border: 1px solid #3c2b5f;
+  font-weight: 900;
+  border-radius: 5px;
+  margin: 0 auto;
+  color: #3c2b5f !important;
+  background: #fff;
+}
+
+.button:hover {
+  color: #fff !important;
+  background: #3c2b5f;
+}
+
+#image-preview-container {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  background-color: rgba(0,0,0,0.5);
+}
+
+#image-preview {
+  display: block;
+  margin: 5% auto;
+  opacity: 1;
+  max-width: 80%;
+  max-height: 80%;
+}
+
+#image-preview-close {
+  cursor: pointer;
+  color: #fff;
+  position: absolute;
+  top: 40px;
+  right: 40px;
 }
