--- a/static/css/main.css
+++ b/static/css/main.css
@@ -79,3 +79,30 @@ h1 {
   top: 40px;
   right: 40px;
 }
+
+footer {
+  background: #2b2b2b;
+  padding: 30px 0;
+}
+
+.social-logo {
+  margin: 0 10px;
+  max-width: 30px;
+  max-height: 30px;
+}
+
+.footer-text {
+  font-weight: 100;
+  color: #fff !important;
+  line-height: 30px;
+  margin: 10px 30px 0 0;
+}
+
+.link {
+  font-weight: 900;
+  color: #fff !important;
+}
+
+.buffer-right-30 {
+  margin-right: 15px;
+}
