--- a/static/css/faq.css
+++ b/static/css/faq.css
@@ -2,6 +2,8 @@
   background: url("/static/images/faqBG.png") center no-repeat;
   background-size: cover;
   padding: 100px 0;
+  min-height: 0;
+  height: auto;
 }
 
 .question-card-container {
