--- a/static/css/sponsors.css
+++ b/static/css/sponsors.css
@@ -9,11 +9,37 @@ h3 {
   color: #cacaca;
 }
 
-.sponsors-row {
+.sponsors-tier {
   margin-bottom: 80px;
 }
 
 .sponsor-image {
-  max-width: 100%;
+  width: 100%;
   max-height: 100%;
+}
+
+.platinum {
+  max-width: 600px;
+}
+
+.gold {
+  max-width: 400px;
+}
+
+.silver {
+  max-width: 300px;
+}
+
+.bronze {
+  max-width: 200px;
+}
+
+.sponsor-image-container {
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 575px) {
+  .sponsor-image {
+    margin-top: 20px;
+  }
 }
