--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -23,3 +23,49 @@
   -moz-box-shadow: 0px 0px 33px 0px rgba(0,0,0,0.3);
   box-shadow: 0px 0px 33px 0px rgba(0,0,0,0.3);
 }
+
+#image-preview-container {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  background-color: rgba(0,0,0,0.5);
+}
+
+.helper {
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+}
+
+#image-preview {
+  max-width: 80%;
+  max-height: 80%;
+  position: relative;
+  display:block;
+  margin:auto;
+}
+
+#image-preview-close {
+  cursor: pointer;
+  color: #fff;
+  position: absolute;
+  top: 40px;
+  right: 40px;
+}
+
+@media screen and (max-width: 767px) {
+  #image-preview-close {
+    top: 20px;
+    right: 20px;
+  }
+
+  #image-preview {
+    max-width: 100%;
+    max-height: 100%;
+  }
+  
+}
