Add missing intel and AWS as sponsors

--- a/static/css/sponsors.css
+++ b/static/css/sponsors.css
@@ -74,6 +74,12 @@ h3 {
   margin-top: 70px;
 }
 
+#aws-logo {
+  min-width: 250px;
+  margin-top: 50px;
+  margin-left: 70px;
+}
+
 @media screen and (max-width: 1199px) {
   #skyscanner-logo {
     margin-left: 20px;
@@ -96,6 +102,18 @@ h3 {
   #visa-logo {
     margin-top: 50px;
     margin-left: 20px;
+  }
+  #push-doctor-logo {
+    width: 170px;
+    margin-left: 33px;
+  }
+  #intel-logo {
+    width: 100px;
+    margin-left: 30px;
+  }
+  #aws-logo {
+    max-width: 70px;
+    margin-left: -40px;
   }
 }
 
@@ -136,6 +154,17 @@ h3 {
     margin-top: 20px;
   }
   #visa-logo, #netcraft-logo, #morgan-stanley-logo, #skyscanner-logo {
+    margin-left: 0;
+  }
+  #push-doctor-logo {
+    margin-left: 0;
+  }
+  #aws-logo {
+    width: 150px;
+    margin-left: -110px;
+  }
+  #intel-logo {
+    width: 130px;
     margin-left: 0;
   }
 }
