--- a/static/css/sponsors.css
+++ b/static/css/sponsors.css
@@ -59,9 +59,15 @@ h3 {
   margin-top: 50px;
 }
 
-#morgan-stanley-logo {
+#barclays-logo {
+  margin-top: 85px;
+  max-width: 280px;
+}
+
+#morgan-stanley-logo{
   margin-top: 90px;
   max-width: 280px;
+  margin-left: 20px;
 }
 
 #skyscanner-logo {
@@ -90,9 +96,12 @@ h3 {
   #amex-logo {
     max-width: 100px;
   }
+  #barclays-logo {
+    margin-top: 67px;
+    max-width: 280px;
+  }
   #morgan-stanley-logo {
     margin-top: 70px;
-    margin-left: -10px;
     max-width: 280px;
   }
   #skyscanner-logo {
@@ -127,8 +136,10 @@ h3 {
   #codethink-logo, #netcraft-logo, #thg-logo {
     margin-top: 25px;
   }
+  #barclays-logo {
+    margin-top: 62px;
+  }
   #morgan-stanley-logo {
-    margin-left: -7px;
     margin-top: 65px;
   }
   #skyscanner-logo {
@@ -150,7 +161,7 @@ h3 {
   #netcraft-logo {
     max-width: 250px;
   }
-  #morgan-stanley-logo, #skyscanner-logo, #visa-logo  {
+  #morgan-stanley-logo, #skyscanner-logo, #visa-logo, #barclays-logo  {
     margin-top: 20px;
   }
   #visa-logo, #netcraft-logo, #morgan-stanley-logo, #skyscanner-logo {
